--- a/templates/home.html
+++ b/templates/home.html
@@ -2,36 +2,15 @@
 </html>
   <head> 
     <title>prakash careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <style>
-      h1 {
-        font-size : 40px;
-        font-family : Roboto;
-        font-weight : normal;
-        color : rgb(128, 0, 255);
-        text-align : center;
-      }
       #banner{
-        width:100%;
-        height:100px;
+        height: 280px;
+        width: 100%;
         object-fit:cover;
-      }
-      h2{
-        font-family: Roboto;
-        color: rgb(190, 34, 67);
-        font-size:32px;
-        text-align:center;
-        font-weight : normal;
-      }
-      .bodyText{
-        font-family : Roboto;
-        color: rgb(100, 150, 90);
-        font-size : 16px;
-        font-weight:normal;
-      }
-      #container{
-        max-width : 720px;
-        margin: 0 auto 0 auto;
-        
         
         
       }
@@ -39,17 +18,21 @@
   </head>
 
   <body>
-    <div id="container">
-      <h1>PRAKASH CAREERS</h1>
-      <img id="banner" src="https://53460f9a-2f1f-44f6-b9a4-1af21d6a8259-00-k8lvqk33u0om.sisko.replit.dev/static/banner.jpg/">
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4"><b>PRAKASH CAREERS</b></h1>
+      <img id="banner" class="img-fluid" src="https://53460f9a-2f1f-44f6-b9a4-1af21d6a8259-00-k8lvqk33u0om.sisko.replit.dev/static/banner.jpg/">
     
-      <h2>about prakash careers</h2>
-        <p class="bodyText" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <h2>open positions</h2>
-        <p class="bodyText">todo __ jobs</p>
-        <div style="text-align:center;">
-          <button>contact us</button>
-          <p>Copyright  2024</p>
+      <h2 class="text-center mt-5 mb-4">about prakash careers</h2>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2 class="text-center mb-3">open positions</h2>
+        <div>
+          {% for job in jobs %}
+           {% include 'jobs.html'%}
+          {% endfor %}
+        </div>
+        <div class="text-center mt-5">
+          <button class="btn btn-info">contact us</button>
+          <p class="text-center mt-2">Copyright  2024</p>
         </div>
         </div>
   </body>
