--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -4,11 +4,11 @@
        style=" color:rgb(100,100,100);">
       <b>{{job['title']}}</b></h4>
     <div>
-      <b>location :</b> {{job['location']}}
+      <b>Location :</b> {{job['location']}}
     </div>
-    {% if 'Salery' in job%}
+    {% if 'salery' in job%}
       <div>
-        <b>salery :</b>{{job['salery']}}
+        <b>Salery :</b>{{job['salery']}}
       <div>
     {% else %}
        <div> 
@@ -17,6 +17,6 @@
     {% endif %}
   </div>
   <div class="col-3 pt-4">
-    <button type="button" class="btn btn-outline-primary">Primary</button>
+    <button type="button" class="btn btn-outline-primary">Apply</button>
   </div>
   </div>
